version 0.1.0-SNAPSHOT: streamline backend and add user info endpoint